--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,24 @@ dependencies {
     implementation group: 'com.auth0', name: 'java-jwt', version: '3.3.0'
     //Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// querydsl 관련 설정
+def querydslDir = "build/generated/querydsl"
+
+tasks.withType(JavaCompile).configureEach {
+    options.generatedSourceOutputDirectory = file(querydslDir)
+}
+
+tasks.named('clean') {
+    delete file(querydslDir)
 }
